# NovaForge

./: .editorconfig  .gitignore  123452346.md  ATLAS_INTEGRATION.md  CMakeLists.txt  CPP_SERVER_SRC_MATCHES.txt  Makefile  NovaForge.sln  NovaForge.slnx  README.md  Updates123.txt  addons123.md  blender addons cont.md  blenderaddon2.txt  build.bat  build.sh  build_all.bat  build_all.sh  build_vs.bat  chatlog1.txt  generate_solution.bat  ideas.md  new1.txt.txt  new123  new12345.txt  newstuffforPCG  newupload.txt
atlas_tests/: CMakeLists.txt  main.cpp  test_ai_miner.cpp  test_console.cpp  test_delta_edit_store.cpp  test_editor_event_bus.cpp  test_editor_panels.cpp  test_editor_tool_layer.cpp  test_engine_frame_callback.cpp  test_entity_commands.cpp  test_game_state.cpp  test_generation_style.cpp  test_hud_panels.cpp  test_log.h  test_mission_editor.cpp  test_net_quality.cpp  test_pcg_preview.cpp  test_runtime_bootstrap.cpp  test_scene_bookmark_manager.cpp  test_undoable_command_bus.cpp  test_viewport.cpp
cpp_client/: CMakeLists.txt  test_atlas_ui.cpp
cpp_client/include/characters/: character_mesh_system.h
cpp_client/include/core/: application.h  entity.h  path_utils.h
cpp_client/include/editor/: delta_edits_merge_tool.h  editor_event_bus.h  editor_tool_layer.h  layer_tag_system.h  live_edit_mode.h  map_editor_tool.h  pcg_snapshot_manager.h  scene_bookmark_manager.h  ship_module_editor_tool.h  undoable_command_bus.h  visual_diff_tool.h
cpp_client/include/rendering/: asteroid_field_renderer.h  camera.h  renderer.h
cpp_client/include/ui/: context_menu.h  radial_menu.h
cpp_client/src/characters/: character_mesh_system.cpp
cpp_client/src/core/: application.cpp  application_input.cpp  application_movement.cpp  application_rendering.cpp  application_state.cpp  entity.cpp
cpp_client/src/editor/: editor_event_bus.cpp  editor_tool_layer.cpp  scene_bookmark_manager.cpp  undoable_command_bus.cpp
cpp_client/src/rendering/: asteroid_field_renderer.cpp  camera.cpp  model.cpp  renderer.cpp
cpp_client/src/ui/: context_menu.cpp  radial_menu.cpp
cpp_server/: CMakeLists.txt  build.bat  build.sh  test_systems.cpp
cpp_server/include/: game_session.h  server.h
cpp_server/include/components/: combat_components.h  core_components.h  crew_components.h  economy_components.h  exploration_components.h  fleet_components.h  fps_components.h  game_components.h  mission_components.h  narrative_components.h  navigation_components.h  npc_components.h  ship_components.h  social_components.h  (+1 more)
cpp_server/src/: game_session.cpp  game_session_combat.cpp  game_session_entities.cpp  game_session_missions.cpp  game_session_movement.cpp  game_session_network.cpp  game_session_scanning.cpp  game_session_stations.cpp  game_session_utils.cpp  server.cpp
cpp_server/tests/: test_ai_economic_actor_system.cpp  test_ambient_traffic_system.cpp  test_citadel_management_system.cpp  test_combat_after_action_system.cpp  test_combat_system.cpp  test_contract_auction_system.cpp  test_contract_system.cpp  test_emotional_arc_system.cpp  test_encounter_spawner_system.cpp  test_event_notification_feed_system.cpp  test_fleet_morale_system.cpp  test_fuel_consumption_system.cpp  test_incursion_system.cpp  test_insurance_system.cpp  test_interest_management_priority_system.cpp  test_leaderboard_system.cpp  test_loot_system.cpp  test_loyalty_point_store_system.cpp  test_main.cpp  test_market_api_system.cpp  test_market_watchlist_system.cpp  test_mission_reward_system.cpp  test_mission_template_system.cpp  test_npc_patrol_route_system.cpp  test_officer_spawn_system.cpp  test_protocol_handler.cpp  test_pvp_toggle_system.cpp  test_relay_clone_install_ui_system.cpp  test_session_progression_system.cpp  test_session_summary_system.cpp  test_shield_arc_hud_system.cpp  test_signature_analysis_system.cpp  test_war_declaration_system.cpp  test_wormhole_database.cpp
editor/: CMakeLists.txt  main.cpp
editor/ai/: AIAggregator.cpp  TemplateAIBackend.cpp  TemplateAIBackend.h
editor/panels/: ConsolePanel.cpp  ConsolePanel.h  ECSInspectorPanel.cpp  ECSInspectorPanel.h  NetInspectorPanel.cpp  NetInspectorPanel.h
editor/tools/: AssetPalettePanel.cpp  AssetStylePanel.cpp  AssetStylePanel.h  CharacterSelectPanel.cpp  DataBrowserPanel.cpp  GalaxyMapPanel.cpp  GamePackagerPanel.cpp  GamePackagerPanel.h  GenerationStylePanel.cpp  GenerationStylePanel.h  LiveSceneManager.cpp  LiveSceneManager.h  MissionEditorPanel.cpp  MissionEditorPanel.h  ModuleEditorPanel.cpp  NPCEditorPanel.cpp  PCGPreviewPanel.cpp  PCGPreviewPanel.h  ShipArchetypePanel.cpp  ShipArchetypePanel.h  SolarSystemEditorPanel.cpp  ViewportPanel.cpp  ViewportPanel.h
editor/ui/: DockNode.h  EditorLayout.cpp  EditorLayout.h  EditorMenuBar.cpp  EditorMenuBar.h  EditorPanel.h  KeybindManager.cpp  KeybindManager.h  UndoStack.cpp  UndoStack.h
engine/: CMakeLists.txt
engine/audio/: AudioEngine.cpp  AudioEngine.h
engine/camera/: Camera.cpp  Camera.h  CameraProjectionPolicy.h
engine/core/: Engine.cpp  Engine.h  GameStateManager.cpp  GameStateManager.h  RuntimeBootstrap.cpp  RuntimeBootstrap.h
engine/ecs/: DeltaEditStore.cpp  DeltaEditStore.h  EntityCommands.h  System.cpp  System.h
engine/graphvm/: GraphVM.cpp  GraphVM.h
engine/input/: InputManager.cpp  InputManager.h
engine/net/: DeltaCompression.cpp  DeltaCompression.h  JitterBuffer.cpp  JitterBuffer.h  LagCompensation.cpp  LagCompensation.h  NetContext.cpp  NetContext.h  NetworkQualityMonitor.cpp  NetworkQualityMonitor.h
engine/physics/: PhysicsWorld.cpp  PhysicsWorld.h
engine/sim/: AIHaulerStateMachine.cpp  AIHaulerStateMachine.h  AIIndustrialistStateMachine.cpp  AIIndustrialistStateMachine.h  AIMinerStateMachine.cpp  AIMinerStateMachine.h  AIPirateStateMachine.cpp  AIPirateStateMachine.h  AIProfileLoader.cpp  AIProfileLoader.h  AISecurityStateMachine.cpp  AISecurityStateMachine.h  AITraderStateMachine.cpp  AITraderStateMachine.h  AIWalletSystem.cpp  AIWalletSystem.h  AdvancedMissionGenerator.cpp  AdvancedMissionGenerator.h  AlertStack.cpp  AlertStack.h  EconomyRulesLoader.cpp  EconomyRulesLoader.h
(+553 files in other folders)
